# EntityManager-Match3Demo

./: .gitignore  CMakeLists.txt  LICENSE.txt  Match3Prototype.sln  README.md
Match3Prototype/: AppManager.cpp  AppManager.h  Board.cpp  Board.h  Match3Prototype.vcxproj  Match3Prototype.vcxproj.filters  WindowManager.cpp  WindowManager.h  main.cpp
Match3Prototype/EntityCore/: Entity.cpp  Entity.h  EntityBatchData.h  EntityHandle.h  EntityManager.cpp  EntityManager.h
Match3Prototype/Render/: RenderTypes.h  Renderer.cpp  Renderer.h
Match3Prototype/Utils/: BlackBoxEntityManager.cpp  BlackBoxEntityManager.h  CoreMath.h  ErrorHandler.cpp  ErrorHandler.h  RGBAToColor.h  ScopeTimer.h
